--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,13 @@
-body{
-    background-color: rgb(224, 5, 5);
+
+@import url('../style/variaboles.css');
+.test, .test2, .test3, .test4{
+    min-height: 100px;
+    min-width: 100%;
+
+}
+.test, .test3{
+    background-color: var(--primary-color);
+}
+.test2, .test4{
+    background-color: var(--secondary-color);
 }
